[gd_scene load_steps=3 format=3 uid="uid://3e4wmb8o4v6e"]

[ext_resource type="Script" path="res://scripts/object_placement_point.gd" id="1_3vagv"]

[sub_resource type="BoxShape3D" id="BoxShape3D_w38ie"]
size = Vector3(1, 0.2, 1)

[node name="ObjectPlacementPoint" type="Area3D" groups=["ObjectPlacementPoint"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_3vagv")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_w38ie")

[node name="ObjectPositionHover" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
gizmo_extents = 0.1

[node name="ObjectPositionGround" type="Marker3D" parent="."]
unique_name_in_owner = true
visible = false
gizmo_extents = 0.1
